--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "ci": "payload migrate && pnpm build"
   },
   "dependencies": {
+    "@lexical/react": "^0.38.2",
+    "@lexical/utils": "^0.38.2",
     "@payloadcms/admin-bar": "3.63.0",
+    "@payloadcms/db-vercel-postgres": "3.63.0",
     "@payloadcms/live-preview-react": "3.63.0",
     "@payloadcms/next": "3.63.0",
     "@payloadcms/plugin-form-builder": "3.63.0",
@@ -32,17 +35,20 @@
     "@payloadcms/plugin-search": "3.63.0",
     "@payloadcms/plugin-seo": "3.63.0",
     "@payloadcms/richtext-lexical": "3.63.0",
+    "@payloadcms/storage-vercel-blob": "3.63.0",
     "@payloadcms/ui": "3.63.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "bson-objectid": "^2.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "lexical": "^0.38.2",
     "lucide-react": "^0.378.0",
     "next": "15.4.7",
     "next-sitemap": "^4.2.3",
@@ -53,9 +59,7 @@
     "react-hook-form": "7.45.4",
     "sharp": "0.34.2",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@payloadcms/db-vercel-postgres": "3.63.0",
-    "@payloadcms/storage-vercel-blob": "3.63.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
