--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "ci": "payload migrate && pnpm build"
   },
   "dependencies": {
-    "@lexical/react": "^0.38.2",
-    "@lexical/utils": "^0.38.2",
+    "@lexical/react": "0.35.0",
+    "@lexical/utils": "0.35.0",
     "@payloadcms/admin-bar": "3.63.0",
     "@payloadcms/db-vercel-postgres": "3.63.0",
     "@payloadcms/live-preview-react": "3.63.0",
@@ -48,7 +48,7 @@
     "dotenv": "16.4.7",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
-    "lexical": "^0.38.2",
+    "lexical": "0.35.0",
     "lucide-react": "^0.378.0",
     "next": "15.4.7",
     "next-sitemap": "^4.2.3",
